# sc4s-manager-community

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  community_pack.yml  config.yml
docs/: architecture.md  product-requirements.md
frontend/: AGENTS.md  index.html  package-lock.json  package.json
schemas/: pack.schema.json
scripts/: api_acceptance_probe.py  browser_route_acceptance.py  build_binary.py  build_frontend.sh  build_release_artifact.py  capture_runtime_counter_delta.py  catalog_sc4s_upstream.py  ci_functional_acceptance.py  crud_journey_acceptance.py  crud_ui_screenshots.py  e2e_remote.py  send_marker_event.py  sync_sc4s_upstream.py  test.sh  validate_acceptance_evidence.py  validate_e2e_ui_user_journeys.py  validate_pack_fixtures.py  validate_package_install.py  validate_packs.py
src/: AGENTS.md
tests/: AGENTS.md  test_acceptance_evidence.py  test_acceptance_probe.py  test_browser_route_acceptance.py  test_catalogue.py  test_catalogue_api.py  test_catalogue_docs_index_strategy.py  test_ci_functional.py  test_ci_functional_live.py  test_control.py  test_exporters.py  test_library.py  test_manager.py  test_operator_runbook_contract.py  test_pack_validation.py  test_package_install_validator.py  test_packaging_foundations.py  test_packs.py  test_packs_api.py  test_release_packaging.py  test_runtime_counter_delta.py  test_runtime_state.py  test_sample_preview.py  test_test_paths.py  test_upstream_catalog.py
(+119 files in other folders)
